--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 			 <br>
 			<span class="help">"C" or Down</span> to clear the actual frame <br>
 			<span class="help">"O"</span> Enable / disable onions <br>
+			<!-- <span class="help">Right mouse</span> eraser <br> -->
 		</p>
 	</div>
 	<div class="tools">
 		<p id="size">Brush size: 5</p>
 		<p id="index">index</p>
 		<p id="count">count</p>
-		<!-- <input type="color" name="color" id=""> -->
+		<!-- <input type="color" name="color" id="color"> -->
 	</div>
 
 	<canvas id="ctx" width="500" height="500"></canvas>
