fixed bug when changing browser window size
Now somee events are coming from inside the canvas, not from the whole document

--- a/index.html
+++ b/index.html
@@ -48,14 +48,12 @@
 	<!-- <label for="import">import</label>
 	<input type="file" name="import" id=""> -->
 
-	<p>Made by <a href="https://github.com/ussaohelcim/paint-animator">ussaohelcim</a>.</p>
+	<p>Made by <a target="_blank" href="https://github.com/ussaohelcim/paint-animator">ussaohelcim</a>.</p>
 
 	<script src="./jwf/dist/jwf.js"></script>
 	<script src="./jwf/dist/jwml.js"></script>
 	<script src="./jwf/dist/jwCL.js"></script>
 	<script src="canvasToWebm.js"></script>
-	<script src="webm.js"></script>
-	<!-- <script src="gif.worker.js"></script> -->
 	<script src="./gif/gif.js"></script>
 	<script src="keybinds.js"></script>
 	<script src="animator.js"></script>
