--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 			 <br>
 			<span class="help">"C" or Down</span> to clear the actual frame <br>
 			<span class="help">"O"</span> Enable / disable onions <br>
+			<span class="help">Left mouse button</span> Pencil <br>
+			<span class="help">Right mouse button</span> Eraser <br>
 			<!-- <span class="help">Right mouse</span> eraser <br> -->
 		</p>
 	</div>
