added frame clone && + keybinds && removed useless stuff
fixes #5

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 <body>
 	<div>
 		<p>
-			<span class="help">Left/Right</span> move the frames <br>
+			<span class="help">Left/Right or "A"/"D"</span> move the frames <br>
 			<span class="help">left alt + Left</span> first frame <span class="help">left alt + Right</span> last frame<br>
-			<span class="help">"N" or Up</span> creates a new frame on the next index <br>
+			<span class="help">"N" or Up or "W"</span> creates a new frame on the next index <br>
 			<span class="help">"left alt + N"</span> creates a new frame on the end of frame list
 			 <br>
-			<span class="help">"C" or Down</span> to clear the actual frame <br>
+			<span class="help">"C" or Down or "S"</span> to clear the actual frame <br>
 			<span class="help">"O"</span> Enable / disable onions <br>
-			<span class="help">Left mouse button</span> Pencil <br>
+			<span class="help">"G"</span> Clone this frame <br>
+			<span class="help">-/+ or "Q"/"E" or mouse wheel</span> Change brush size <br>
+			<span class="help">Space</span> Play animation <br>
+			<span class="help">Left mouse button</span> Pencil 
 			<span class="help">Right mouse button</span> Eraser <br>
-			<!-- <span class="help">Right mouse</span> eraser <br> -->
 		</p>
 	</div>
 	<div class="tools">
@@ -43,12 +45,16 @@
 	<p>
 		<label for="fps">FPS</label>
 		<input placeholder="FPS" type="number" name="fps" id="fps">
-
 	</p>
 
-	<!-- <input id="render" type="button" value="Export"> -->
-	<!-- <label for="import">import</label>
-	<input type="file" name="import" id=""> -->
+	<!-- <p>
+		Export
+		<input id="export" type="button" value="Export">
+	</p>
+	<p>
+		Import
+		<input type="file" accept="application/json" name="import" id="import">
+	</p> -->
 
 	<p>Made by <a target="_blank" href="https://github.com/ussaohelcim/paint-animator">ussaohelcim</a>.</p>
 
