--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 				<span class="help">Left/Right or "A"/"D"</span> move the frames <br>
 				<span class="help">left alt + Left</span> first frame <span class="help">left alt + Right</span> last frame<br>
 				<span class="help">"N" or Up or "W"</span> creates a new frame on the next index <br>
-				<span class="help">"left alt + N"</span> creates a new frame on the end of frame list
-				 <br>
 				<span class="help">"C" or Down or "S"</span> to clear the actual frame <br>
 				<span class="help">"O"</span> Enable / disable onions <br>
 				<span class="help">"G"</span> Clone this frame <br>
 				<span class="help">-/+ or "Q"/"E" or mouse wheel</span> Change brush size <br>
 				<span class="help">Space</span> Play animation <br>
-				<span class="help">Left mouse button</span> Pencil 
+				<span class="help">Left mouse button</span> Pencil <br>
 				<span class="help">Right mouse button</span> Eraser <br>
+				<span class="help">Left alt + left mouse</span> Eraser <br>
 				<span class="help">Delete</span> Delete this frame <br>
 				<span class="help">Enter</span> Export animation to json <br>
 				<span class="help">Drop</span> an animation json to import <br>
